tests/errors/test_47.xpp
// Identifiers declared void[]

class Haha {
	pub fn foo(x: void[]) void {}
}

extern printf(i8*, ...) i32;

let y: void[21];

fn foo(x: void[]) i64[] {}

fn main() void {
    let y: void[3];
}
